# pc-t9-keyboard

./: .gitignore  .npmrc  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/input/: event_tap.rs  mod.rs  typer.rs
src-tauri/src/shortcut/: mod.rs  register.rs
src-tauri/src/window/: manager.rs  mod.rs
src/components/: CandidateBar.tsx  FunctionBar.tsx  KeyButton.tsx  Keypad.tsx  MiniLauncher.tsx  Panel.tsx  PinyinPreview.tsx  TitleBar.tsx
src/engine/: inputEngine.ts  segmenter.test.ts  segmenter.ts  syllables.ts  t9.ts
src/hooks/: useAutoHide.ts  useDrag.ts  useEdgeSnap.ts  useExternalCommit.ts  useGlobalShortcut.ts
src/layouts/: KeyboardLayout.tsx
src/stores/: inputStore.ts  uiStore.ts
src/styles/: index.css
src/utils/: cn.ts  tauri.ts
