[package]
name = "pc-t9-keyboard"
version = "0.1.0"
description = "Windows 桌面悬浮九键输入面板 — 数字转拼音，交给系统 IME"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

# The library that main.rs (and mobile entry points) call into.
[lib]
name = "pc_t9_keyboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `macos-private-api` is required because the window is transparent
# (tauri.conf.json -> app.macOSPrivateApi = true).
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Cross-platform synthetic input (used for editing keys everywhere, and for
# letters on non-Windows so the UI can be developed on macOS/Linux).
enigo = "0.3"
# Native Acrylic (Windows) / Vibrancy (macOS) behind the transparent webview.
window-vibrancy = "0.5"

# Windows-only: scancode SendInput (IME-safe letter typing) + WS_EX_NOACTIVATE.
# 版本要与 Tauri 2.11 内部使用的 windows-core 对齐（当前 0.61），
# 否则我们这边的 HWND 和 window.hwnd() 返回的 HWND 是两个不同 crate 的同名类型，
# 调 GetWindowLongPtrW 之类会报 trait bound 不满足。
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

# macOS-only.
# - tauri-nspanel: convert the main window into an NSPanel with the
#   nonactivating style mask so clicking it doesn't steal focus from the
#   target text field — the Mac equivalent of Windows' WS_EX_NOACTIVATE.
# - core-graphics: send "raw" CGEvent keyboard events directly (no enigo
#   `EVENT_MARKER` field, no non-standard flags). Chinese IMEs filter out
#   enigo's marked synthetic events, so we go straight to the AppKit API.
[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
core-graphics = "0.25"
# RunLoop wrapping for the global CGEventTap (listen-only) that detects
# physical Space/Enter/Escape so the frontend can resync after the IME
# commits/cancels without going through our panel buttons.
core-foundation = "0.10"
# objc runtime — used to patch tauri-nspanel's RawNSPanel canBecomeKeyWindow → NO
# so the panel never grabs key focus (we need the underlying text app to keep it).
objc = "0.2"

[features]
# Enables Tauri's custom-protocol for production builds.
custom-protocol = ["tauri/custom-protocol"]
